# api_cypherus_helpdesk

./: pyproject.toml
app/: __init__.py
app/config/: database.env  settings.py
app/controller/: company_controller.py  user_controller.py
app/models/: company_models.py  user_models.py
app/models/database/: db.py  db_models.py  get_session.py
app/routers/: company_routers.py  user_routers.py
app/schemas/: user_schemas.py
app/services/: company_services.py  user_services.py
app/tests/: test_company.py
