[tool.poetry]
name = "api-cypherus-helpdesk"
version = "0.1.0"
description = ""
authors = ["Leonardo Augusto"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.2"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
