[tool.poetry]
name = "api-cypherus-helpdesk"
version = "0.1.0"
description = ""
authors = ["Leonardo Augusto"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.115.2"}
sqlalchemy = "^2.0.36"
uvicorn = "^0.32.0"
psycopg2 = "^2.9.10"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
pydantic = {extras = ["email"], version = "^2.9.2"}
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"
pytest-sugar = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
